[gd_scene load_steps=16 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/Incinerator.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame2.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame3.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame5.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame6.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame8.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame4.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame7.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/IncineratorMeltingFrame1.png" type="Texture" id=9]
[ext_resource path="res://RainIsoMainContents/Scenes/Incinerator.gd" type="Script" id=10]
[ext_resource path="res://RainIsoMainContents/Resources/GlowPiece2.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9045, 48.0218 )

[sub_resource type="Animation" id=2]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.7132, 50.0314 )

[sub_resource type="CircleShape2D" id=4]
radius = 36.694

[node name="Incinerator" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Inci = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="CircleOfDeath" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CircleOfDeath"]
shape = SubResource( 4 )
disabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2.38419e-07, 2.38419e-07 )
scale = Vector2( 1.2151, 1.12134 )
texture = ExtResource( 11 )
color = Color( 1, 0, 0.141176, 1 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="CircleOfDeath" to="." method="_on_CircleOfDeath_body_entered"]
